<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Category">

    <RelativeLayout
        android:id="@+id/catogory_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimary"
            android:elevation="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settings_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:src="@drawable/ic_settings"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>

            <TextView
                android:id="@+id/catogory_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:text="Categories"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:src="@drawable/category_img"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/catogory_text"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="Select Your Specialist\nFor Your Need..."
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp">

            </TextView>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/image_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/category_layout_border"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="108dp"
                            android:layout_height="108dp"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/family_doc_img"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/family_doc_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/family_n_outpatient_doctors"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="21dp"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="15dp"
                            android:includeFontPadding="false"
                            android:text="@string/they_care_for_whole_family_including_children_adults_and_elderly"
                            android:textSize="12sp"></TextView>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/category_layout_border"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="108dp"
                            android:layout_height="108dp"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/cardiologist_img"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/cardiology_doctors"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="21sp"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="15dp"
                            android:text="@string/they_are_experts_on_heart"
                            android:textSize="12sp">

                        </TextView>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/category_layout_border"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="108dp"
                            android:layout_height="108dp"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/alergist_img"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/allergist_immunilogists"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="21sp"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="15dp"
                            android:text="@string/they_treat_immune_system"></TextView>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/category_layout_border"
                    android:elevation="10dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="108dp"
                            android:layout_height="108dp"
                            android:layout_centerInParent="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/dermatologist_img"
                            app:civ_border_color="@color/colorPrimary"
                            app:civ_border_width="1dp"></de.hdodenhof.circleimageview.CircleImageView>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/dermatologist"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="21sp"></TextView>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginBottom="25dp"
                            android:text="@string/have_problems_with_your_skin"
                            android:textSize="12sp"></TextView>
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_layout"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:background="@drawable/category_layout_border"
        android:visibility="gone">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/category_layout_toolbar"
            android:elevation="10dp"
            android:gravity="center_horizontal"
            app:titleTextColor="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/close_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:text="Menu"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <Button
                android:id="@+id/buttoneditprofile"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/category_layout_border"
                android:text="Edit Profile"
                android:textColor="@color/colorPrimaryDark"></Button>

            <Button
                android:id="@+id/buttonlogout"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_below="@id/buttoneditprofile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:background="@drawable/category_layout_border"
                android:text="Logout"
                android:textColor="@color/colorPrimaryDark"></Button>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>